<resources>
    <string name="app_name">Autocartas</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="login">Log in</string>
    <string name="stats">Stats</string>
    <string name="wins">Wins</string>
    <string name="ties">Ties</string>
    <string name="loses">Loses</string>
    <string name="get_game">Get Game</string>
    <string name="reset_game">Reset Game</string>
    <string name="log_out">Log Out</string>
    <string name="round">Round %1$s</string>
    <string name="wins_count">Wins: %1$s</string>
    <string name="ties_count">Ties: %1$s</string>
    <string name="loses_count">Loses: %1$s</string>
    <string name="feature">FEATURE</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You Lose…</string>
    <string name="you_got_tie">Tie</string>

    <string name="close">Close</string>
    <string name="users_list">Get users list</string>
    <string name="user_info">Get user info</string>
    <string name="edit_user">Edit user</string>
    <string name="delete_user">Delete user</string>
    <string name="coches_list">Get cars list</string>
    <string name="coche_info">Get car info</string>
    <string name="edit_coche">Edit car</string>
    <string name="delete_coche">Delete car</string>
    <string name="create_user">Create user</string>
    <string name="create_coche">Create car</string>
    <string name="crud_user">User: %1$s</string>
    <string name="crud_name">Name: %1$s</string>
    <string name="crud_passwd">Password: %1$s</string>
    <string name="coche_id">ID: %1$s</string>
    <string name="coche_modelo">"Model: %1$s"</string>
    <string name="coche_pais">Country: %1$s</string>
    <string name="coche_motor">Engine: %1$s</string>
    <string name="coche_cilindros">Cylinders: %1$s</string>
    <string name="coche_potencia">Power: %1$s</string>
    <string name="coche_revxmin">Rev. X min.: %1$s</string>
    <string name="coche_velocidad">Speed: %1$s</string>
    <string name="coche_consumo">Consumption/100Km: %1$s</string>
    <string name="name">Name</string>
    <string name="modelo">Model</string>
    <string name="id">ID</string>
    <string name="country">Country</string>
    <string name="motor">Engine</string>
    <string name="cilindro">Cylinder</string>
    <string name="potencia">Power</string>
    <string name="revxmin">Rev. X min.</string>
    <string name="velocidad">Speed</string>
    <string name="consumo">Consumption/100Km</string>
    <string name="save">Save %1$s</string>
    <string name="coche">Car</string>
    <string name="delete">Delete %1$s</string>
</resources>
