<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/tvCUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_user"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCUser" />

    <TextView
        android:id="@+id/tvCPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crud_passwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCNombre" />

    <TextView
        android:id="@+id/tvCWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCPasswd" />

    <TextView
        android:id="@+id/tvCTies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ties_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCWins" />

    <TextView
        android:id="@+id/tvCLoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loses_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCTies" />

</androidx.constraintlayout.widget.ConstraintLayout>